; ModuleID = '/home/carl/AnghaBench/linux/drivers/virtio/extr_virtio_mmio.c_vm_notify.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/virtio/extr_virtio_mmio.c_vm_notify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.virtqueue = type { i32, i32 }
%struct.virtio_mmio_device = type { i64 }

@VIRTIO_MMIO_QUEUE_NOTIFY = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.virtqueue*)* @vm_notify to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vm_notify(%struct.virtqueue* %0) #0 {
  %2 = alloca %struct.virtqueue*, align 8
  %3 = alloca %struct.virtio_mmio_device*, align 8
  store %struct.virtqueue* %0, %struct.virtqueue** %2, align 8
  %4 = load %struct.virtqueue*, %struct.virtqueue** %2, align 8
  %5 = getelementptr inbounds %struct.virtqueue, %struct.virtqueue* %4, i32 0, i32 1
  %6 = load i32, i32* %5, align 4
  %7 = call %struct.virtio_mmio_device* @to_virtio_mmio_device(i32 %6)
  store %struct.virtio_mmio_device* %7, %struct.virtio_mmio_device** %3, align 8
  %8 = load %struct.virtqueue*, %struct.virtqueue** %2, align 8
  %9 = getelementptr inbounds %struct.virtqueue, %struct.virtqueue* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.virtio_mmio_device*, %struct.virtio_mmio_device** %3, align 8
  %12 = getelementptr inbounds %struct.virtio_mmio_device, %struct.virtio_mmio_device* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* @VIRTIO_MMIO_QUEUE_NOTIFY, align 8
  %15 = add nsw i64 %13, %14
  %16 = call i32 @writel(i32 %10, i64 %15)
  ret i32 1
}

declare dso_local %struct.virtio_mmio_device* @to_virtio_mmio_device(i32) #1

declare dso_local i32 @writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
